# ai-sec-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
apps/agent-runtime/: Dockerfile  pyproject.toml
apps/agent-runtime/app/: main.py
apps/agent-runtime/tests/: test_health.py
apps/ai-gateway/: pyproject.toml
apps/ai-gateway/app/: main.py
apps/ai-gateway/tests/: test_health.py
apps/rag-ingestion/: Dockerfile  pyproject.toml
apps/rag-ingestion/app/: main.py
apps/rag-ingestion/tests/: test_health.py
docs/: architecture.md  implementation-plan.md  security-notes.md  threat-model.md
observability/examples/: ai-security-events.jsonl
observability/otel-collector/: config.yaml
observability/wazuh/decoders/: ai-security-decoder.xml
observability/wazuh/rules/: ai-security-rules.xml
policies/access/: document-access.yaml
policies/guardrails/: input-policy.yaml  output-policy.yaml
policies/prompts/: research-agent.yaml
policies/tools/: tool-policy.yaml
